--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# site
+site/README.md
+site/.DS_Store
+
+# npm
+package-lock.json
