--- a/.github/workflows/code-coverage.yaml
+++ b/.github/workflows/code-coverage.yaml
@@ -24,16 +24,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install Dependencies
-      run: npm install
+      run: npm install -g pnpm && pnpm install
 
     - name: Build    
-      run: npm run build
+      run: pnpm build
 
     - name: Testing    
-      run: npm run test
+      run: pnpm test
       
     - name: Code Coverage
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
 
