adding in test services for redis and rabbitmq

--- a/.github/workflows/code-coverage.yaml
+++ b/.github/workflows/code-coverage.yaml
@@ -29,6 +29,9 @@ jobs:
     - name: Build    
       run: pnpm build
 
+    - name: Test Services
+      run: pnpm test:services:start
+
     - name: Testing    
       run: pnpm test
       
