migrating to mono repo

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,7 @@ jobs:
       run: pnpm test:services:start
 
     - name: Testing    
-      run: pnpm test
+      run: pnpm test:ci
 
     - name: Publish
       run: |
