--- a/.github/workflows/code-coverage.yaml
+++ b/.github/workflows/code-coverage.yaml
@@ -33,7 +33,7 @@ jobs:
       run: pnpm test:services:start
 
     - name: Testing    
-      run: pnpm test
+      run: pnpm test:ci
       
     - name: Code Coverage
       uses: codecov/codecov-action@v5
