--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ESNext",
         "module": "ESNext",
         "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-        "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+        "baseUrl": "packages/qified/src",                                  /* Specify the base directory to resolve non-relative module names. */
 
         /* Emit */
         "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
@@ -24,6 +24,6 @@
         ]
     },
     "include": [
-        "src/**/*.ts"
+        "packages/qified/src/**/*.ts"
     ]
 }
