--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "Jared Wray <me@jaredwray.com>",
   "license": "MIT",
   "devDependencies": {
+    "@vitest/coverage-v8": "^3.0.7",
     "c8": "^10.1.3",
     "docula": "^0.10.1",
-    "vitest": "^3.0.5"
+    "vitest": "^3.0.7"
   }
 }
