--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qified-mono-repo",
+  "name": "@qified/mono",
   "version": "1.0.0",
   "private": true,
   "description": "Qified Mono Repo",
@@ -17,9 +17,9 @@
   "author": "Jared Wray <me@jaredwray.com>",
   "license": "MIT",
   "devDependencies": {
-    "@vitest/coverage-v8": "^3.0.9",
+    "@vitest/coverage-v8": "^3.1.1",
     "c8": "^10.1.3",
     "docula": "^0.11.0",
-    "vitest": "^3.0.9"
+    "vitest": "^3.1.1"
   }
 }
