--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "description": "Qified Mono Repo",
   "scripts": {
     "test": "pnpm -r test",
-    "test:ci": "c8 --reporter=lcov pnpm -r test:ci",
+    "test:ci": "pnpm -r test:ci",
     "test:services:start": "docker compose up -d",
     "test:services:stop": "docker compose down",
     "website:build": "npx docula build",
     "website:serve": "npx docula serve",
-    "build": "pnpm recursive run build",
-    "clean": "pnpm recursive run clean"
+    "build": "pnpm -r build",
+    "clean": "pnpm -r clean"
   },
   "keywords": [],
   "author": "Jared Wray <me@jaredwray.com>",
   "license": "MIT",
   "devDependencies": {
     "@vitest/coverage-v8": "^3.1.4",
-    "c8": "^10.1.3",
     "docula": "^0.12.2",
     "vitest": "^3.1.4"
   }
