--- a/packages/qified/tsconfig.json
+++ b/packages/qified/tsconfig.json
@@ -2,8 +2,7 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "ESNext",
-        "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-        "baseUrl": "packages/qified/src",                                  /* Specify the base directory to resolve non-relative module names. */
+        "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */                                 /* Specify the base directory to resolve non-relative module names. */
 
         /* Emit */
         "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
@@ -22,8 +21,5 @@
         "lib": [
             "ESNext", "DOM"
         ]
-    },
-    "include": [
-        "packages/qified/src/**/*.ts"
-    ]
+    }
 }
