--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -33,6 +33,9 @@
   "dependencies": {
     "redis": "^4.6.7"
   },
+  "peerDependencies": {
+    "qified": "workspace:^"
+  },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.2.4",
     "rimraf": "^6.0.1",
