--- a/.github/workflows/code-coverage.yaml
+++ b/.github/workflows/code-coverage.yaml
@@ -38,5 +38,5 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./packages/qified/coverage/lcov.info
+        files: ./packages/qified/coverage/lcov.info, ./packages/redis/coverage/lcov.info
 
