--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@qified/mono",
-  "version": "1.0.0",
+  "version": "0.2.1",
   "private": true,
+  "type": "module",
   "description": "Qified Mono Repo",
   "scripts": {
     "test": "pnpm -r test",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^3.2.4",
     "docula": "^0.13.1",
+    "tsx": "^4.20.3",
     "vitest": "^3.2.4"
   }
 }
