--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "website:build": "npx docula build",
     "website:serve": "npx docula serve",
     "version:sync": "tsx scripts/version-sync.ts",
+    "publish:packages": "pnpm publish -r --filter=packages/qified && pnpm publish -r --filter=!packages/qified",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean"
   },
