--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "website:build": "npx docula build",
     "website:serve": "npx docula serve",
     "version:sync": "tsx scripts/version-sync.ts",
-    "publish:qified": "pnpm recursive --filter 'qified' run publish",
-    "publish:packages": "pnpm publish:qified && pnpm recursive --filter '!qified' run publish",
+    "publish:qified": "pnpm recursive --filter 'qified' run build:publish",
+    "publish:packages": "pnpm publish:qified && pnpm recursive --filter '!qified' run build:publish",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean"
   },
