--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -20,6 +20,7 @@
     "test:ci": "xo && vitest run --coverage",
     "clean": "rimraf ./dist ./coverage",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
+    "build:publish": "pnpm build && pnpm publish --access public",
     "prepare": "pnpm build"
   },
   "keywords": [
