--- a/packages/rabbitmq/package.json
+++ b/packages/rabbitmq/package.json
@@ -16,8 +16,8 @@
     "node": ">=20"
   },
   "scripts": {
-    "test": "xo --fix && vitest run --coverage",
-    "test:ci": "xo && vitest run --coverage",
+    "test": "biome check --write && vitest run --coverage",
+    "test:ci": "biome check && vitest run --coverage",
     "clean": "rimraf ./dist ./coverage",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
     "build:publish": "pnpm build && pnpm publish --access public",
@@ -38,14 +38,14 @@
     "qified": "workspace:^"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.1.4",
+    "@types/amqplib": "^0.10.7",
+    "@types/node": "^24.0.15",
     "@vitest/coverage-v8": "^3.2.4",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.4",
-    "xo": "^1.2.1",
-    "@types/amqplib": "^0.10.7",
-    "@types/node": "^24.0.15"
+    "vitest": "^3.2.4"
   },
   "files": [
     "dist",
