--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,6 +35,9 @@ jobs:
     - name: Test Services
       run: pnpm test:services:start
 
+    - name: Wait for Services
+      run: sleep 5
+
     - name: Testing    
       run: pnpm test:ci
 
