--- a/packages/nats/package.json
+++ b/packages/nats/package.json
@@ -16,8 +16,8 @@
     "node": ">=20"
   },
   "scripts": {
-    "test": "xo --fix && vitest run --coverage",
-    "test:ci": "xo && vitest run --coverage",
+    "test": "biome check --write && vitest run --coverage",
+    "test:ci": "biome check && vitest run --coverage",
     "clean": "rimraf ./dist ./coverage",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
     "prepare": "pnpm build"
@@ -40,12 +40,12 @@
     "qified": "workspace:^"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.1.4",
     "@vitest/coverage-v8": "^3.2.4",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.4",
-    "xo": "^1.1.1"
+    "vitest": "^3.2.4"
   },
   "files": [
     "dist",
