--- a/packages/nats/package.json
+++ b/packages/nats/package.json
@@ -16,8 +16,9 @@
     "node": ">=20"
   },
   "scripts": {
-    "test": "biome check --write && vitest run --coverage",
-    "test:ci": "biome check && vitest run --coverage",
+    "lint": "biome check --write --error-on-warnings",
+    "test": "pnpm lint && vitest run --coverage",
+    "test:ci": "biome check --error-on-warnings && vitest run --coverage",
     "clean": "rimraf ./dist ./coverage",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
     "build:publish": "pnpm build && pnpm publish --access public",
