--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Jared Wray <me@jaredwray.com>",
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "^2.2.2",
     "@vitest/coverage-v8": "^3.2.4",
     "docula": "^0.20.0",
     "tsx": "^4.20.5",
