--- a/packages/rabbitmq/package.json
+++ b/packages/rabbitmq/package.json
@@ -22,7 +22,7 @@
     "clean": "rimraf ./dist ./coverage",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
     "build:publish": "pnpm build && pnpm publish --access public",
-    "prepare": "pnpm build"
+    "prepublishOnly": "pnpm build"
   },
   "keywords": [
     "qified",
