--- a/packages/qified/package.json
+++ b/packages/qified/package.json
@@ -21,7 +21,7 @@
     "test:ci": "biome check --error-on-warnings && vitest run --coverage",
     "clean": "rimraf ./dist ./coverage ./site/dist",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
-    "build:publish": "pnpm build && pnpm publish --access public",
+    "build:publish": "pnpm build && pnpm publish --access public --no-git-checks",
     "prepublishOnly": "pnpm build"
   },
   "keywords": [
