--- a/packages/zeromq/package.json
+++ b/packages/zeromq/package.json
@@ -17,8 +17,7 @@
   },
   "scripts": {
     "lint": "biome check --write --error-on-warnings",
-    "test": "pnpm lint && vitest --pool threads --poolOptions.threads.singleThread run --coverage",
-    "test:debug": "vitest --inspect-brk --pool threads --poolOptions.threads.singleThread --testTimeout 0",
+    "test": "pnpm lint && vitest run --coverage",
     "test:ci": "biome check --error-on-warnings && vitest run --coverage",
     "clean": "rimraf ./dist ./coverage",
     "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --clean",
@@ -40,12 +39,12 @@
     "qified": "workspace:^"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
-    "@types/node": "^24.3.0",
+    "@biomejs/biome": "^2.2.5",
+    "@types/node": "^24.6.2",
     "@vitest/coverage-v8": "^3.2.4",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   },
   "files": [
