updating package.json

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:ci": "pnpm -r test:ci",
     "test:services:start": "docker compose up -d",
     "test:services:stop": "docker compose down",
-    "website:build": "npx docula build",
-    "website:serve": "npx docula serve",
+    "website:build": "docula build",
+    "website:serve": "docula serve",
     "version:sync": "tsx scripts/version-sync.ts",
     "publish:qified": "pnpm recursive --filter 'qified' run build:publish",
     "publish:packages": "pnpm publish:qified && pnpm recursive --filter '!qified' run build:publish",
