--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**/src/**/*", "**/test/**/*"]
+		"includes": ["**/src/**/*.ts", "**/test/**/*.ts"]
 	},
 	"formatter": {
 		"enabled": true,
