--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -33,6 +33,7 @@
   "author": "Jared Wray <me@jaredwray.com>",
   "license": "MIT",
   "dependencies": {
+    "hookified": "^1.8.0",
     "redis": "^5.10.0"
   },
   "peerDependencies": {
