--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
+    "@types/node": "^25.0.3",
     "@vitest/coverage-v8": "^4.0.16",
     "docula": "^0.31.2",
+    "rimraf": "^6.1.2",
+    "tsup": "^8.5.1",
     "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   }
 }
