--- a/packages/rabbitmq/package.json
+++ b/packages/rabbitmq/package.json
@@ -39,14 +39,7 @@
     "qified": "workspace:^"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.10",
-    "@types/amqplib": "^0.10.8",
-    "@types/node": "^25.0.3",
-    "@vitest/coverage-v8": "^4.0.16",
-    "rimraf": "^6.1.2",
-    "tsup": "^8.5.1",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
+    "@types/amqplib": "^0.10.8"
   },
   "files": [
     "dist",
