--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -39,14 +39,7 @@
   "peerDependencies": {
     "qified": "workspace:^"
   },
-  "devDependencies": {
-    "@biomejs/biome": "^2.3.10",
-    "@vitest/coverage-v8": "^4.0.16",
-    "rimraf": "^6.1.2",
-    "tsup": "^8.5.1",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
-  },
+  "devDependencies": {},
   "files": [
     "dist",
     "LICENSE"
